  parameter-groups for the "dpanel" and "arbond" commands
- Print out alternative definition of R^2 in FE linear panel 
  data models
- Add choice of compression level when saving data in native
  gdt format
- Stata dta import: handle (illegal!) non-ASCII characters in
  variable names
- X-12-ARIMA interface: support the new X-13-ARIMA-SEATS as an
  alternative
- Fix bug: the --test-down option to "coint" was not working
  as advertised
- Fix bug (?): the final regression in "coint" (Engle-Granger
  test) could end up using a different sample range depending
  on whether or not the --skip-df option was given
- Fix bug: incorrect handling of Poisson regression when the
  specification does not include an intercept term
- Fix bug: bad handing of decimal comma in context of the --by
  option
- Fix bug: incorrect treatment of big-endian SPSS "sav" files
  on data import
- Fix bug: the auxiliary regression for White's test should
  contain a constant even if the model to be tested does not
- Fix bug: wrong starting date being sent to x12a/x13as for
  monthly data starting in October
- Fix bug: score calculation for random-effects probit was 
  incorrect
- Fix bug: incorrect estimates when the --robust option was
  used with the "wls" command
- Fix bug 181
- Internals: add support for multiple, independent PRNGs
- configure script: add an option --disable-www which drops
  the libcurl dependency conditional on not building the
  GUI program
- win32 build: update gmp to 5.1.3, mpfr to 3.1.2
	
2013-11-21 version 1.9.14
- Use daily dates when plotting daily/weekly data and there
  are not too many observations
- Line-numbering in the script editor: make this a preference
  which is remembered
- mols() function: parallelize some of the work for builds
  with openmp enabled
- GUI: provide a menu item for adding a panel unit index
- GUI: "/File/Save data as" now switches the current dataset
  to the name of the saved one